--- a/app/src/main/res/layout/report_form.xml
+++ b/app/src/main/res/layout/report_form.xml
@@ -66,6 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/goal_custom_name" />
 
     <pksokolowski.github.com.threegoals.reporter.TallyCounter
+        android:id="@+id/tally_counter"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
