display correct default values on Reporter start
ReportFomrFragments are now assigned correct default values when
ReporterActivity is started.

--- a/app/src/main/res/layout/report_form.xml
+++ b/app/src/main/res/layout/report_form.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusableInTouchMode="true">
+    <requestFocus/>
 
     <TextView
         android:id="@+id/goal_official_name"
@@ -15,6 +17,7 @@
         android:layout_marginTop="8dp"
         android:ems="4"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/goal_custom_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/goal_custom_name"
