--- a/app/src/main/res/layout/report_form.xml
+++ b/app/src/main/res/layout/report_form.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text="Tap on + for each positive thing related to the endevour."
+        android:text="@string/report_form_positives_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/likert_scale" />
 
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text="Did you try your best?"
+        android:text="@string/report_form_trying_hard_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goal_custom_name" />
 
