fix not showing date in report form
Date for which a report is submitted is now correctly shown to the user.
The ScrollView (root element of layout) is additionally scrolled all the
way up on Activity's onCreate, to make sure user gets to see the date.

--- a/app/src/main/res/layout/reporter_activity.xml
+++ b/app/src/main/res/layout/reporter_activity.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -66,10 +66,10 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="32dp"
+            android:text="@string/reporter_done_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/goal_3"
-            android:text="@string/reporter_done_button_text"
             tools:text="done" />
     </android.support.constraint.ConstraintLayout>
 
