add chart selection UI
A new Fragment was implemented, which presents a requested number of
buttons with one of them chosen as default (or none, if default value is
outside bounds of the provided array of button titles). It is now
plugged in the MainActivity and will be used to select chart type to be
shown.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <fragment
+        android:id="@+id/selection_buttons"
+        android:name="pksokolowski.github.com.threegoals.SelectorButtonsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/pieChart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/help_imageview"
         android:layout_width="32dp"
