--- a/app/src/main/res/layout/reporter_activity.xml
+++ b/app/src/main/res/layout/reporter_activity.xml
@@ -71,6 +71,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/goal_3"
             tools:text="done" />
+
+        <requestFocus />
+
     </android.support.constraint.ConstraintLayout>
 
 </ScrollView>
