--- a/app/src/main/res/layout/reports_editor_dialog.xml
+++ b/app/src/main/res/layout/reports_editor_dialog.xml
@@ -7,10 +7,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/top_layout">
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
