--- a/app/src/main/res/layout/report_form.xml
+++ b/app/src/main/res/layout/report_form.xml
@@ -31,7 +31,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/goal_official_name"
         app:layout_constraintTop_toTopOf="parent" />
