--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#5da44e</color>
 
     <color name="selector_inactive_connection">#dadada</color>
+    <color name="pieChartPrimary">#6e9e64</color>
+    <color name="pieChartSecondary">#d1e7c7</color>
 </resources>
